--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Skripnti jezici i web programiranje</h1>
 
-        <div class="list-group">
+        <div class="list-group mt-3">
             <a href="/bootstrap-blog/" class="list-group-item list-group-item-action">Zadatak: <b>Bootstrap turistički blog</b></a>
         </div>
     </div>
