--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,13 @@
     
     <div class="container">
         <h1>Skripnti jezici i web programiranje</h1>
+        <h1>Mario Kopjar, 3.H</h1>
 
-        <div class="list-group mt-3">
-            <a href="/bootstrap-blog/" class="list-group-item list-group-item-action">Zadatak: <b>Bootstrap turistički blog</b></a>
+        <div class="list-group mt-4">
+            <a href="/bootstrap-blog/" class="list-group-item list-group-item-action">
+                Zadatak: <b>Bootstrap turistički blog</b>
+                <span class="badge badge-primary badge-pill">21. travnja 2020.</span>
+            </a>
         </div>
     </div>
 
