--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <h1>Mario Kopjar, 3.H</h1>
 
         <div class="list-group mt-4">
-            <a href="/bootstrap-blog/" class="list-group-item list-group-item-action">
+            <a href="/bootstrap-blog/" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                 Zadatak: <b>Bootstrap turistički blog</b>
                 <span class="badge badge-primary badge-pill">21. travnja 2020.</span>
             </a>
