--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
         <div class="list-group mt-4">
             <a href="/bootstrap-blog/" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                Zadatak: <b>Bootstrap turistički blog</b>
+                <div>Zadatak: <b>Bootstrap turistički blog</b></div>
                 <span class="badge badge-primary badge-pill">21. travnja 2020.</span>
             </a>
         </div>
