--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
         <div class="list-group mt-4">
             <a href="/bootstrap-blog/" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                 <div>Zadatak: <b>Bootstrap turistički blog</b></div>
-                <span class="badge badge-primary badge-pill">21. travnja 2020.</span>
+                <span class="badge badge-primary badge-pill">zadano: 21. travnja 2020.</span>
+                <span class="badge badge-success badge-pill">riješeno: 24. travnja 2020.</span>
             </a>
         </div>
     </div>
