--- a/src/index.html
+++ b/src/index.html
@@ -6,30 +6,51 @@
     <title>Skriptni jezici i web programiranje - rješeni zadatci</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/9844010574.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
     <div class="container">
         <h1>Skripnti jezici i web programiranje</h1>
         <h2>Mario Kopjar, 3.H</h2>
 
         <div class="list-group mt-4">
-            <a href="/bootstrap-blog/" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center list-group-item-linkable" data-link="bootstrap-blog/">
                 <div>
                     Zadatak: <b>Bootstrap turistički blog</b>
                 </div>
                 <div>
                     <span class="badge badge-primary badge-pill">zadano: 21. travnja 2020.</span>
                     <span class="badge badge-success badge-pill">riješeno: 24. travnja 2020.</span>
+
+                    <span class="badge badge-white badge-pill">
+                        <a href="https://github.com/recycleTheC/sjiwp/tree/master/src/bootstrap-blog">
+                            <i class="fab fa-github fa-lg"></i>
+                        </a>
+                    </span>
                 </div>
-            </a>
+            </div>
         </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function() {
+            $('.list-group-item-linkable').on('click', function() {
+                window.location.href = $(this).data('link');
+            });
+
+            $('.list-group-item-linkable a, .list-group-item-linkable button')
+            .on('click', function(e) {
+                e.stopPropagation();
+            });
+        });
+    </script>
 
 </body>
 </html>
