--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <h1>Skripnti jezici i web programiranje</h1>
+        <h1 class="mt-2">Skriptni jezici i web programiranje</h1>
         <h2>Mario Kopjar, 3.H</h2>
 
         <div class="list-group mt-4">
