--- a/src/bootstrap-blog/index.html
+++ b/src/bootstrap-blog/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         
         <div class="container">
-            <a href="#" class="navbar-brand">Hawaii</a>
+            <a href="/" class="navbar-brand">Hawaii</a>
     
             <ul class="navbar-nav">
                 <li class="nav-item">
