--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,26 @@
         <h2>Mario Kopjar, 3.H</h2>
 
         <div class="list-group mt-4">
+            <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center list-group-item-linkable" data-link="bootstrap-blog_price-toggle/pgp/index.php">
+                <div>
+                    Zadatak: <b>Bootstrap turistički blog sa cijenama</b>
+                </div>
+                <div>
+                    <span class="badge badge-primary badge-pill">zadano: 19. svibnja 2020.</span>
+                    <span class="badge badge-success badge-pill">riješeno: 19. svibnja 2020.</span>
+                    <span class="badge badge-danger badge-pill">PHP verzija</span>
+                    <span class="badge badge-warning badge-pill">samo za preuzimanje</span>
+
+                    <span class="badge badge-white badge-pill">
+                        <a href="https://github.com/recycleTheC/sjiwp/tree/master/src/bootstrap-blog_price-toggle/php" target="_blank">
+                            <i class="fab fa-github fa-lg"></i>
+                        </a>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="list-group mt-4">
             <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center list-group-item-linkable" data-link="bootstrap-blog_price-toggle/">
                 <div>
                     Zadatak: <b>Bootstrap turistički blog sa cijenama</b>
